# openair5g-cn-1

./: README.md  comp_log  gmon.out  oaienv  slog
conf/: amf.conf
generator/: GenerateIECode.cpp  GenerateNASMessageCode.cpp  GenerateNASMessageCode.h  README.txt
generator/IE/: GenerateIECode.cpp  GenerateIECode.hpp  GenerateIECode.out  a.out  sh.sh
generator/NAS/: GenerateNASMessageCode.cpp  GenerateNASMessageCode.out  a.out  sh.sh
scripts/: build_amf  fire.sh  gmon.out  run_amf  run_gnb  run_ue
src/: .gitignore
src/amf/: AmfMain.cpp  amf-server.cpp
src/amf/AmfAppLayer/: amf_app.c  amf_app.h  amf_app_bearer.c  amf_app_defs.c  amf_app_defs.h  amf_app_itti_messaging.c  amf_app_itti_messaging.h  amf_app_statistics.c  amf_app_statistics.h  amf_config.c  amf_config.h  amf_default_values.h
src/amf/AmfGeneratedDataModels/: AccessType.cpp  AccessType.h  AllowedNssai.cpp  AmfCreateEventSubscription.h  AmfCreatedEventSubscription.h  AmfEvent.cpp  AmfEventArea.cpp  AmfEventArea.h  AmfEventNotification.h  AmfEventReport.h  AmfEventSubscription.cpp  AmfEventTrigger.cpp  AmfEventType.cpp  AmfStatusChangeNotification.cpp  AmfStatusChangeNotification.h  AmfStatusInfo.cpp  AmfUpdatedEventSubscription.cpp  Arp.cpp  Arp.h  (+108 more)
src/amf/MicroServiceProtocolStack/: CMakeLists.txt  amf-services.cpp  amf-services.h
src/amf/MicroServiceProtocolStack/CommService/: .gitignore  CMakeLists.txt  README.md
src/amf/MicroServiceProtocolStack/CommService/api/: AMFStatusChangeSubscribeApi.cpp  AMFStatusChangeSubscribeApi.h  AMFStatusChangeSubscribeModifyApi.cpp  AMFStatusChangeSubscribeModifyApi.h  AMFStatusChangeUnSubscribeApi.cpp  CreateUEContxtApi.cpp  EBIAssignmentApi.cpp  EBIAssignmentApi.h  N1N2MessageSubscribeApi.h  N1N2MessageTransferApi.h  N1N2MessageUnSubscribeApi.h  NonUEN2InfoSubscribeApi.h  ReleaseUEContxtApi.cpp  UEContextTransferApi.cpp  UEContextTransferApi.h
src/amf/MicroServiceProtocolStack/CommService/impl/: AMFStatusChangeSubscribeApiImpl.cpp  AMFStatusChangeSubscribeApiImpl.h  AMFStatusChangeSubscribeModifyApiImpl.cpp  AMFStatusChangeSubscribeModifyApiImpl.h  AMFStatusChangeUnSubscribeApiImpl.h  CreateUEContxtApiImpl.cpp  CreateUEContxtApiImpl.h  EBIAssignmentApiImpl.h  N1N2MessageSubscribeApiImpl.cpp  N1N2MessageTransferApiImpl.cpp  N1N2MessageTransferApiImpl.h  N1N2MessageUnSubscribeApiImpl.cpp  N1N2MessageUnSubscribeApiImpl.h  NonUEN2InfoSubscribeApiImpl.cpp  NonUEN2InfoSubscribeApiImpl.h  NonUEN2InfoUnSubscribeApiImpl.cpp  NonUEN2InfoUnSubscribeApiImpl.h  NonUEN2MessageTransferApiImpl.cpp  NonUEN2MessageTransferApiImpl.h  ReleaseUEContxtApiImpl.h  UEContextTransferApiImpl.cpp  UEContextTransferApiImpl.h
src/amf/MicroServiceProtocolStack/CommService/model/: AccessType.h  AllowedSNssai.h  AmfEvent.cpp  AmfEventArea.cpp  AmfEventArea.h  AmfEventMode.cpp  AmfEventMode.h  AmfEventSubscription.h  AmfEventTrigger.cpp  AmfEventTrigger.h  AmfEventType.cpp  AmfEventType.h  AreaOfValidity.h  AssignEbi.cpp  AssignEbiFailed.cpp  AssignEbiFailed.h  CipheringAlgorithm.cpp  Ecgi.cpp  Ecgi.h  Ecgi_2.cpp  EpsBearerId.cpp  GlobalRanNodeId.cpp  GlobalRanNodeId.h  GlobalRanNodeId_2.cpp  GlobalRanNodeId_2.h  Helpers.cpp  Helpers.h  IntegrityAlgorithm.cpp  KeyAmf.cpp  KeyAmf.h  KeyAmfType.cpp  MmContext.cpp  MmContext.h  ModelBase.cpp  N1MessageClass.cpp  N1MessageClass.h  N1MessageContainer.h  N1N2MsgTxfrFailureNotification.cpp  N2InfoContent.cpp  N2InfoContent.h  (+41 more)
src/amf/MicroServiceProtocolStack/CommService/utils/: conversions.h  log.c
src/amf/MicroServiceProtocolStack/EvetService/api/: CreateSubscriptionApi.cpp  CreateSubscriptionApi.h  DeleteSubscriptionApi.cpp  ModifySubscriptionApi.cpp  ModifySubscriptionApi.h
src/amf/MicroServiceProtocolStack/EvetService/impl/: CreateSubscriptionApiImpl.cpp  CreateSubscriptionApiImpl.h  DeleteSubscriptionApiImpl.cpp  DeleteSubscriptionApiImpl.h
src/amf/MicroServiceProtocolStack/EvetService/model/: AmfCreateEventSubscription.cpp  AmfCreatedEventSubscription.cpp  AmfEventArea.cpp  AmfEventMode.cpp  AmfEventMode.h  AmfEventNotification.cpp  AmfEventState.cpp  AmfEventState.h  AmfEventType.h  CmInfo.cpp  CmState.cpp  CmState.h  CommunicationFailure.cpp  Ecgi.h  EutraLocation.h  GlobalRanNodeId_2.cpp  Helpers.h  InvalidParam.h  LocationFilter.h  ModelBase.cpp  Ncgi.h  NgApCause.h  NrLocation.h  Object.cpp  Object.h  PlmnId.cpp  PlmnId.h  PresenceState.cpp  ProblemDetails.cpp  ProblemDetails.h  RmInfo.cpp  SubscribedData.cpp  SubscribedData.h  SubscribedDataFilter.h  Tai.cpp  Tai.h  UeReachability.cpp  UserLocation.h
src/amf/MicroServiceProtocolStack/LocService/api/: ProvideLocationApi.cpp
src/amf/MicroServiceProtocolStack/LocService/impl/: ProvideLocationApiImpl.cpp  ProvideLocationApiImpl.h
src/amf/MicroServiceProtocolStack/LocService/model/: AccuracyFulfilmentIndicator.cpp  CivicAddress.cpp  ExternalClientType.h  GeographicArea.h  GeographicalCoordinates.cpp  HorizontalVelocity.cpp  HorizontalVelocityWithUncertainty.cpp  HorizontalWithVerticalVelocity.h  HorizontalWithVerticalVelocityAndUncertainty.cpp  HorizontalWithVerticalVelocityAndUncertainty.h  InvalidParam.cpp  LcsPriority.cpp  LcsPriority.h  LocationQoS.cpp  LocationQoS.h  LocationType.h  Ncgi.cpp  NotifiedUELocation.h  PlmnId.cpp  PlmnId.h  Point.h  PointAltitude.h  PointAltitudeUncertainty.h  PointUncertaintyEllipse.h  Polygon.h  PositioningMethod.cpp  PositioningMethod.h  PositioningMode.h  ProblemDetails.cpp  ProblemDetails.h  ProvideUELocation.h  ResponseTime.cpp  ResponseTime.h  SupportedGADShapes.cpp  VelocityEstimate.cpp  VelocityEstimate.h  VelocityRequested.cpp  VerticalDirection.h
src/amf/MicroServiceProtocolStack/MtService/: CMakeLists.txt
src/amf/MicroServiceProtocolStack/MtService/api/: ProvideDomainSelectionInfoApi.h
src/amf/MicroServiceProtocolStack/MtService/impl/: EnableUEReachabilityApiImpl.cpp  EnableUEReachabilityApiImpl.h  ProvideDomainSelectionInfoApiImpl.cpp  ProvideDomainSelectionInfoApiImpl.h
src/amf/MicroServiceProtocolStack/MtService/model/: EnableUeReachabilityReqData.cpp  Helpers.h  RatType.h  UeContextInfo.h  UeReachability.cpp  UeReachability.h
(+677 files in other folders)
